<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/nombree1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text= "@string/nombree1" />
        <TextView
            android:id="@+id/precioo1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text= "@string/precioo1"
            android:layout_below="@id/nombree1"/>

        <ImageView
            android:id="@+id/imageView14"
            android:layout_width="216dp"
            android:layout_height="205dp"
            android:src="@drawable/bermudanino"
            android:layout_below="@id/precioo1"/>

        <TextView
            android:id="@+id/nombree2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text= "@string/nombree2"
            android:layout_below="@id/imageView14"/>
        <TextView
            android:id="@+id/precioo2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text= "@string/precioo2"
            android:layout_below="@id/nombree2"/>



    <ImageView
        android:id="@+id/imageView13"
        android:layout_width="wrap_content"
        android:layout_height="214dp"
        android:src="@drawable/zapatosnikenino"
        android:layout_below="@id/precioo2"/>

        <TextView
            android:id="@+id/nombree3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text= "@string/nombree3"
            android:layout_below="@id/imageView13"/>
        <TextView
            android:id="@+id/precioo3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text= "@string/precioo3"
            android:layout_below="@id/nombree3"/>



    <ImageView
        android:id="@+id/imageView15"
        android:layout_width="198dp"
        android:layout_height="241dp"
        android:src="@drawable/buzonino"
        android:layout_below="@id/precioo3"/>

        <TextView
            android:id="@+id/nombree4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text= "@string/nombree4"
            android:layout_below="@id/imageView15"/>
        <TextView
            android:id="@+id/precioo4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text= "@string/precioo4"
            android:layout_below="@id/nombree4"/>
    <ImageView
        android:id="@+id/imageView16"
        android:layout_width="201dp"
        android:layout_height="200dp"
        android:src="@drawable/conjuntonino"
        android:layout_below="@id/precioo4"/>

        <TextView
            android:id="@+id/nombree5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text= "@string/nombree5"
            android:layout_below="@id/imageView16"/>
        <TextView
            android:id="@+id/precioo5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text= "@string/precioo5"
            android:layout_below="@id/nombree5"/>


        <ImageView
        android:id="@+id/imageView17"
        android:layout_width="209dp"
        android:layout_height="201dp"
        android:src="@drawable/pijamanino"
            android:layout_below="@id/precioo5"/>

        <Button
            android:id="@+id/btn_regresar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/imageView7"
            android:layout_marginTop="16dp"
            android:onClick="regresar"
            android:text="@string/btn_regresar"
            android:textSize="18sp" />

    </LinearLayout>

    </ScrollView>

</RelativeLayout>